force-app/main/default/objects/TestsSummary__c/TestsSummary__c.object-meta.xml
<CustomObject>
    <label>Tests</label>
    <nameField>
        <displayFormat>T{0000}</displayFormat>
        <label>Tests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>