force-app/main/default/objects/TestsSummary__c/fields/ApexTestCoverage__c.field-meta.xml
<CustomField>
    <fullName>ApexTestCoverage__c</fullName>
    <label>ApexTestCoverage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>