force-app/main/default/objects/TestsSummary__c/fields/ApexUnitTests__c.field-meta.xml
<CustomField>
    <fullName>ApexUnitTests__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ApexUnitTests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>