force-app/main/default/objects/TestsSummary__c/fields/FlowTestCoverage__c.field-meta.xml
<CustomField>
    <fullName>FlowTestCoverage__c</fullName>
    <label>FlowTestCoverage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>