force-app/main/default/objects/TestsSummary__c/fields/TestDuration__c.field-meta.xml
<CustomField>
    <fullName>TestDuration__c</fullName>
    <label>TestDuration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>