force-app/main/default/objects/TestsSummary__c/fields/TestMethodsCompleted__c.field-meta.xml
<CustomField>
    <fullName>TestMethodsCompleted__c</fullName>
    <label>TestMethodsCompleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>