force-app/main/default/objects/TestsSummary__c/fields/TestMethodsFailed__c.field-meta.xml
<CustomField>
    <fullName>TestMethodsFailed__c</fullName>
    <label>TestMethodsFailed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>