force-app/main/default/objects/TestsSummary__c/fields/TestOutcome__c.field-meta.xml
<CustomField>
    <fullName>TestOutcome__c</fullName>
    <label>TestOutcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>